--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ DB_PASSWORD=
 
 # 应用配置
 APP_NAME=Modern Chat
-APP_URL=https://chat.hyacine.com.cn/chat
+APP_URL=https://
 
 # 安全设置
 # TRUSTED_PROXIES=
